<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the cricket score counter. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cktstadium2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="16dp"
                android:text="South Africa"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/team_name_textSize" />

            <ImageView
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_gravity="center"
                android:src="@drawable/salogo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="@dimen/eight_dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/score_textSize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="@dimen/eight_dp"
                    android:text="@string/slash"
                    android:textColor="@color/black"
                    android:textSize="@dimen/score_textSize" />

                <TextView
                    android:id="@+id/team_a_wicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="@dimen/eight_dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/score_textSize" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginLeft="@dimen/two_four_dp"
                android:layout_marginRight="@dimen/two_four_dp"
                android:onClick="addSixForTeamA"
                android:text="@string/six_runs" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginLeft="@dimen/two_four_dp"
                android:layout_marginRight="@dimen/two_four_dp"
                android:onClick="addFourForTeamA"
                android:text="@string/four_runs" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginLeft="@dimen/two_four_dp"
                android:layout_marginRight="@dimen/two_four_dp"
                android:onClick="addThreeForTeamA"
                android:text="@string/three_runs" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginLeft="@dimen/two_four_dp"
                android:layout_marginRight="@dimen/two_four_dp"
                android:onClick="addTwoForTeamA"
                android:text="@string/two_runs" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginLeft="@dimen/two_four_dp"
                android:layout_marginRight="@dimen/two_four_dp"
                android:onClick="addOneForTeamA"
                android:text="@string/one_run" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wide_noball"
                    android:onClick="wideRunForTeamA"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="wicketForTeamA"
                    android:text="@string/wicket" />
            </LinearLayout>

        </LinearLayout>


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/one_six_dp"
            android:background="#fff9c4" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="@dimen/one_six_dp"
                android:text="India"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="@dimen/team_name_textSize" />

            <ImageView
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_gravity="center"
                android:src="@drawable/bcci" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="8dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/score_textSize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="@dimen/eight_dp"
                    android:text="/"
                    android:textColor="@color/black"
                    android:textSize="@dimen/score_textSize" />

                <TextView
                    android:id="@+id/team_b_wicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="@dimen/eight_dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/score_textSize" />
            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginLeft="@dimen/two_four_dp"
                android:layout_marginRight="@dimen/two_four_dp"
                android:onClick="addSixForTeamB"
                android:text="@string/six_runs" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginLeft="@dimen/two_four_dp"
                android:layout_marginRight="@dimen/two_four_dp"
                android:onClick="addFourForTeamB"
                android:text="@string/four_runs" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginLeft="@dimen/two_four_dp"
                android:layout_marginRight="@dimen/two_four_dp"
                android:onClick="addThreeForTeamB"
                android:text="@string/three_runs" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginLeft="@dimen/two_four_dp"
                android:layout_marginRight="@dimen/two_four_dp"
                android:onClick="addTwoForTeamB"
                android:text="@string/two_runs" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight_dp"
                android:layout_marginLeft="@dimen/two_four_dp"
                android:layout_marginRight="@dimen/two_four_dp"
                android:onClick="addOneForTeamB"
                android:text="@string/one_run" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wide_noball"
                    android:onClick="wideRunForTeamB"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wicket"
                    android:onClick="wicketForTeamB"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/one_six_dp"
        android:onClick="resetScore"
        android:text="@string/reset" />

</RelativeLayout>